apt-clone (0.2.3) UNRELEASED; urgency=low

  * apt_clone.py:
    - fix restoring of the clone with later apt versions (thanks
      to Colin Watson)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 27 Jan 2012 16:29:17 +0100

apt-clone (0.2.2) unstable; urgency=low

  * fix extraction of no-longer downloadable debs, thanks
    to Gaurav Saxena for the patch! (closes: #637247)
  * fix python-argparse dependency, thanks to Adrian Bunk
    (closes: Bug#653517)

 -- Michael Vogt <mvo@debian.org>  Mon, 02 Jan 2012 17:55:49 +0100

apt-clone (0.2.1) unstable; urgency=low

  * apt-clone:
    - improve --help output (closes: #641864), thanks to
      Rogerio. Brito
  * apt-clone.8:
    - add simple man page
  * apt_clone.py:
    - fix tar prefix detection

 -- Michael Vogt <mvo@debian.org>  Wed, 19 Oct 2011 14:54:15 +0200

apt-clone (0.2) unstable; urgency=low

  * Initial release (Closes: #622868).

 -- Alessio Treglia <alessio@debian.org>  Wed, 08 Jun 2011 00:49:05 +0200